# CppGroup

./: .gitignore
Dalin/Testing/: CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Testing.sln  Testing.vcxproj  Testing.vcxproj.filters  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
Dalin/Testing/Libraries/include/glad/: glad.h
Dalin/Testing/Libraries/lib/: glfw3.lib
Dalin/Testing/Testing/x64/Debug/: Testing.exe.recipe  Testing.ilk  vc143.idb
Dalin/Testing/Testing/x64/Debug/Testing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Testing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Madlibs/: CMakeLists.txt  README.md  build.bat  build.sh  buildCMake.sh  macRun.sh
Madlibs/madlibs/: EscapeRoom.txt  Jumangi.txt  Space.txt  Wizard.txt  demo.txt  skiing.txt
Madlibs/src/: Madlib.cpp  Madlib.h  main.cpp
Minecraft/: CMakeLists.txt  README.md  buildFiles.sh  compile.sh  createBuild.bat  out
Minecraft/assets/shaders/: basicFrag.glsl  basicVert.glsl
Minecraft/include/glad/: glad.h
Minecraft/src/: Block.h  Game.cpp  Game.h  Model.cpp  Model.h  Shader.h  Terrain.cpp  chunk.h  main.cpp  world.cpp  world.h
Minecraft/src/lib/: glad.c
Minecraft/statLib/: README.md
PetGame/: README.md
TicTacToe/: README.md
TicTacToe/src/: Board.cpp  Board.h  a.out  main.cpp
